--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -20,11 +20,12 @@
 }
 
 
-/* Navigation styling */
+/*Home Navigation styling */
 
-.home-nav{
+.home-pg-nav{
     height: 10vh;
     border: 1px solid transparent;
+    padding: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;   
@@ -42,16 +43,14 @@ img{
     height: 100%;
 }
 
-
-.home-nav ul{
+ul{
+    border: 1px solid transparent;
     display: flex;
 }
 
-.home-nav ul li,a{
+ul li{
+    padding: 10px;
     list-style: none;
-    padding-right: 2em;
-    color: var(--main-color);
-    font-family: sans-serif,;
 }
 
 .menubar{
@@ -60,6 +59,7 @@ img{
 
 a{
     text-decoration: none;
+    color: var(--main-color);
 }
 
 
@@ -454,17 +454,22 @@ footer>h1{
 }
 /* styling mobile responsiveness */
 @media screen and (max-width: 768px) { 
-#hidephoneMenubar{
-    display: none;
-    }
 
-#phoneMenubar{
+.home-pg-nav ul{
+    display: none;
+}
+
+.menubar{
+    z-index: 10;
+}
+#responsiveness{
     position: absolute;
-    top: 10%;
+    top: 0%;
     right: 0%;
     border: 1px solid transparent;
     width: 100%;
     height: 50vh;
+    opacity: 1000;
     background-color: var(--main-bg-color);
     animation: slide 0.7s ease-in-out 0s;
     z-index: 5;
@@ -472,7 +477,6 @@ footer>h1{
     flex-direction: column;
     justify-content: space-around;
 }
-
 @keyframes slide {
     0%{
         transform: translate(-5em);
