--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -496,7 +496,8 @@ footer>h1{
     position: absolute;
     top: 0%;
     right: 0%;
-    border: 1px solid transparent;
+    border: 1px solid #33A7F4;
+    box-shadow: 0px 0px 20px 2px #33A7F4;
     width: 100%;
     height: 50vh;
     opacity: 1000;
